@@ -322,6 +322,20 @@ argument_list|(
 literal|"wait"
 argument_list|)
 argument_list|)
+operator|||
+name|Boolean
+operator|.
+name|FALSE
+operator|.
+name|equals
+argument_list|(
+name|args
+operator|.
+name|get
+argument_list|(
+literal|"wait"
+argument_list|)
+argument_list|)
 condition|)
 name|wait
 operator|=
